# ros-tf-digit-recognition

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/digit_recognition/cmake/: digit_recognitionConfig.cmake
src/digit_recognition/: CMakeLists.txt  package.xml
src/digit_recognition/launch/: digit_recognition.launch
src/digit_recognition/models/: generate_model.py
src/digit_recognition/nodes/: digit_classifier.py  image_process_node.py  image_raw.py  tf_digit_classifier.py
src/digit_recognition/nodes/tf_model/: freeze_cnn_tf.py  generate_cnn_tf.py
src/digit_recognition/scripts/: check_assistance_server.py  tf_digit_classifier.py
src/digit_recognition/srv/: DigitCheck.srv
